--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -8,22 +7,32 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     body {
-      background-image: url('https://example.com/background.jpg');
+      background-image: url('background.jpg');
       background-size: cover;
+      background-position: center;
+      font-family: 'Segoe UI', sans-serif;
     }
   </style>
 </head>
 <body class="min-h-screen flex items-center justify-center">
-  <div id="app" class="w-full max-w-4xl bg-white bg-opacity-90 p-6 rounded-lg shadow-lg">
-    <div id="loginSection" class="mb-6">
-      <h1 class="text-2xl font-bold mb-4 text-center">Login Pengguna</h1>
-      <input type="text" id="username" placeholder="Username" class="w-full mb-2 p-2 border rounded" />
-      <input type="password" id="password" placeholder="Password" class="w-full mb-4 p-2 border rounded" />
-      <button onclick="login()" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded w-full">Login</button>
+  <div id="app" class="w-full max-w-5xl bg-white bg-opacity-90 p-6 rounded-xl shadow-2xl backdrop-blur-md">
+    <div class="text-center mb-6">
+      <img src="logo-sekolah.png" alt="Logo Sekolah" class="mx-auto w-24 h-24 mb-2">
+      <h1 class="text-3xl font-bold text-blue-700">Aplikasi Inventaris Aset SMA Negeri 20</h1>
+      <p class="text-gray-700">Versi Web - Mudah Digunakan & Informatif</p>
     </div>
 
+    <!-- Login Section -->
+    <div id="loginSection" class="mb-6">
+      <h2 class="text-2xl font-semibold mb-4 text-center text-gray-800">Login Pengguna</h2>
+      <input type="text" id="username" placeholder="Username" class="w-full mb-2 p-3 border rounded shadow-sm" />
+      <input type="password" id="password" placeholder="Password" class="w-full mb-4 p-3 border rounded shadow-sm" />
+      <button onclick="login()" class="bg-blue-600 hover:bg-blue-800 text-white py-2 px-4 rounded w-full">Login</button>
+    </div>
+
+    <!-- Main Section -->
     <div id="mainSection" style="display:none">
-      <h2 class="text-xl font-bold mb-4">Form Input Aset Sekolah</h2>
+      <h2 class="text-xl font-bold mb-4 text-blue-800">Form Input Aset Sekolah</h2>
       <form id="assetForm" class="grid grid-cols-1 gap-4 md:grid-cols-2">
         <input type="text" placeholder="Nama Barang" id="nama" class="p-2 border rounded" required>
         <input type="text" placeholder="Jenis Barang" id="jenis" class="p-2 border rounded" required>
@@ -35,40 +44,40 @@
         <input type="date" id="tanggal" class="p-2 border rounded" required>
         <input type="file" id="foto" accept="image/*" class="p-2 border rounded" required>
       </form>
-      <button onclick="simpanData()" class="mt-4 bg-green-500 text-white px-4 py-2 rounded">Simpan</button>
+      <button onclick="simpanData()" class="mt-4 bg-green-600 hover:bg-green-800 text-white px-4 py-2 rounded">Simpan</button>
 
-      <h3 class="text-lg font-semibold mt-6">Filter Rekap</h3>
-      <div class="flex gap-2 mb-2">
+      <h3 class="text-lg font-semibold mt-6 text-gray-800">Filter Rekap</h3>
+      <div class="flex flex-wrap gap-2 mb-4">
         <input type="number" placeholder="Tahun" id="filterTahun" class="p-2 border rounded">
         <input type="month" id="filterBulan" class="p-2 border rounded">
-        <button onclick="filterData()" class="bg-blue-600 text-white px-3 py-1 rounded">Terapkan Filter</button>
+        <button onclick="filterData()" class="bg-blue-500 hover:bg-blue-700 text-white px-3 py-2 rounded">Terapkan Filter</button>
       </div>
 
-      <div class="overflow-x-auto">
-        <table class="min-w-full bg-white text-sm" id="tabelData">
-          <thead class="bg-gray-200 text-left">
+      <div class="overflow-x-auto bg-white rounded shadow">
+        <table class="min-w-full text-sm text-left border" id="tabelData">
+          <thead class="bg-blue-200">
             <tr>
-              <th class="px-2 py-1">Tanggal</th>
-              <th class="px-2 py-1">Nama</th>
-              <th class="px-2 py-1">Jenis</th>
-              <th class="px-2 py-1">Jumlah</th>
-              <th class="px-2 py-1">Harga Satuan</th>
-              <th class="px-2 py-1">Total</th>
-              <th class="px-2 py-1">Dana</th>
-              <th class="px-2 py-1">Tahun</th>
-              <th class="px-2 py-1">Penggunaan</th>
-              <th class="px-2 py-1">Foto</th>
+              <th class="px-2 py-2">Tanggal</th>
+              <th class="px-2 py-2">Nama</th>
+              <th class="px-2 py-2">Jenis</th>
+              <th class="px-2 py-2">Jumlah</th>
+              <th class="px-2 py-2">Harga Satuan</th>
+              <th class="px-2 py-2">Total</th>
+              <th class="px-2 py-2">Dana</th>
+              <th class="px-2 py-2">Tahun</th>
+              <th class="px-2 py-2">Penggunaan</th>
+              <th class="px-2 py-2">Foto</th>
             </tr>
           </thead>
           <tbody id="dataBody"></tbody>
         </table>
       </div>
-      
-<button onclick="downloadPDF()" class="mt-2 bg-red-500 text-white px-4 py-2 rounded">Unduh PDF</button>
 
+      <button onclick="downloadPDF()" class="mt-4 bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded">Unduh PDF</button>
     </div>
   </div>
 
+  <!-- Scripts -->
   <script>
     let dataInventaris = [];
 
@@ -142,22 +151,21 @@
     }
   </script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-<script>
-  function downloadPDF() {
-    const table = document.getElementById('tabelData');
-    html2canvas(table).then(canvas => {
-      const imgData = canvas.toDataURL('image/png');
-      const pdf = new jspdf.jsPDF('l', 'mm', 'a4');
-      const imgProps = pdf.getImageProperties(imgData);
-      const pdfWidth = pdf.internal.pageSize.getWidth();
-      const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
-      pdf.addImage(imgData, 'PNG', 10, 10, pdfWidth - 20, pdfHeight);
-      pdf.save("rekap_inventaris.pdf");
-    });
-  }
-</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+  <script>
+    function downloadPDF() {
+      const table = document.getElementById('tabelData');
+      html2canvas(table).then(canvas => {
+        const imgData = canvas.toDataURL('image/png');
+        const pdf = new jspdf.jsPDF('l', 'mm', 'a4');
+        const imgProps = pdf.getImageProperties(imgData);
+        const pdfWidth = pdf.internal.pageSize.getWidth();
+        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
+        pdf.addImage(imgData, 'PNG', 10, 10, pdfWidth - 20, pdfHeight);
+        pdf.save("rekap_inventaris.pdf");
+      });
+    }
+  </script>
 </body>
-
 </html>
