--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <div id="app" class="w-full max-w-5xl bg-white bg-opacity-90 p-6 rounded-xl shadow-2xl backdrop-blur-md">
     <div class="text-center mb-6">
       <img src="logo-sekolah.png" alt="Logo Sekolah" class="mx-auto w-24 h-24 mb-2">
-      <h1 class="text-3xl font-bold text-blue-700">Aplikasi Inventaris Aset</h1>
-      <p class="text-3xl font-bold text-gray-700"> SMA Negeri 20 Medan</p>
+      <h1 class="text-3xl font-bold text-blue-700">Aplikasi Inventaris Barang</h1>
+      <p class="text-2xl font-bold text-green-700"> SMA Negeri 20 Medan</p>
     </div>
 
     <!-- Login Section -->
