--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -10,162 +11,181 @@
       background-image: url('background.jpg');
       background-size: cover;
       background-position: center;
-      font-family: 'Segoe UI', sans-serif;
     }
   </style>
 </head>
 <body class="min-h-screen flex items-center justify-center">
-  <div id="app" class="w-full max-w-5xl bg-white bg-opacity-90 p-6 rounded-xl shadow-2xl backdrop-blur-md">
-    <div class="text-center mb-6">
-      <img src="logo-sekolah.png" alt="Logo Sekolah" class="mx-auto w-24 h-24 mb-2">
-      <h1 class="text-3xl font-bold text-blue-700">Aplikasi Inventaris Barang</h1>
-      <p class="text-2xl font-bold text-green-700"> SMA Negeri 20 Medan</p>
+  <div id="app" class="w-full max-w-5xl bg-white bg-opacity-90 p-6 rounded-lg shadow-lg">
+    <div class="flex justify-center mb-4">
+      <img src="logo-sekolah.png" alt="Logo Sekolah" class="h-20">
     </div>
-
-    <!-- Login Section -->
     <div id="loginSection" class="mb-6">
-      <h2 class="text-2xl font-semibold mb-4 text-center text-gray-800">Login Pengguna</h2>
-      <input type="text" id="username" placeholder="Username" class="w-full mb-2 p-3 border rounded shadow-sm" />
-      <input type="password" id="password" placeholder="Password" class="w-full mb-4 p-3 border rounded shadow-sm" />
-      <button onclick="login()" class="bg-blue-600 hover:bg-blue-800 text-white py-2 px-4 rounded w-full">Login</button>
+      <h1 class="text-2xl font-bold mb-4 text-center">Login Pengguna</h1>
+      <input type="text" id="username" placeholder="Username" class="w-full mb-2 p-2 border rounded" />
+      <input type="password" id="password" placeholder="Password" class="w-full mb-4 p-2 border rounded" />
+      <button onclick="login()" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded w-full">Login</button>
     </div>
 
-    <!-- Main Section -->
     <div id="mainSection" style="display:none">
-      <h2 class="text-xl font-bold mb-4 text-blue-800">Form Input Aset Sekolah</h2>
+      <h2 class="text-xl font-bold mb-4">Form Input Aset Sekolah</h2>
       <form id="assetForm" class="grid grid-cols-1 gap-4 md:grid-cols-2">
+        <input type="text" placeholder="Nomor Urut" id="urut" class="p-2 border rounded" required>
+        <input type="date" placeholder="Tanggal Pembukuan" id="tanggal" class="p-2 border rounded" required>
+        <input type="text" placeholder="Kode Barang" id="kode" class="p-2 border rounded" required>
         <input type="text" placeholder="Nama Barang" id="nama" class="p-2 border rounded" required>
-        <input type="text" placeholder="Jenis Barang" id="jenis" class="p-2 border rounded" required>
-        <input type="number" placeholder="Jumlah" id="jumlah" class="p-2 border rounded" required>
+        <input type="text" placeholder="Keterangan Barang" id="keteranganBarang" class="p-2 border rounded">
+        <input type="number" placeholder="Jumlah Barang" id="jumlah" class="p-2 border rounded" required>
         <input type="number" placeholder="Harga Satuan" id="harga" class="p-2 border rounded" required>
-        <input type="text" placeholder="Asal Dana" id="dana" class="p-2 border rounded" required>
-        <input type="number" placeholder="Tahun Pembelian" id="tahun" class="p-2 border rounded" required>
-        <input type="text" placeholder="Penggunaan Barang" id="penggunaan" class="p-2 border rounded">
-        <input type="date" id="tanggal" class="p-2 border rounded" required>
+        <input type="text" placeholder="Total Harga" id="total" class="p-2 border rounded bg-gray-100" disabled>
+        <input type="text" placeholder="Asal Dana" id="dana" class="p-2 border rounded">
+        <input type="number" placeholder="Tahun Pembuatan" id="tahun" class="p-2 border rounded">
+        <input type="text" placeholder="Asal Barang" id="asal" class="p-2 border rounded">
+        <input type="text" placeholder="Kelengkapan Dokumen" id="dokumen" class="p-2 border rounded">
+        <input type="text" placeholder="Keadaan Barang" id="keadaan" class="p-2 border rounded">
+        <input type="text" placeholder="Pengguna Barang" id="pengguna" class="p-2 border rounded">
+        <input type="text" placeholder="Keterangan" id="keterangan" class="p-2 border rounded">
         <input type="file" id="foto" accept="image/*" class="p-2 border rounded" required>
       </form>
-      <button onclick="simpanData()" class="mt-4 bg-green-600 hover:bg-green-800 text-white px-4 py-2 rounded">Simpan</button>
+      <button onclick="simpanData()" class="mt-4 bg-green-500 text-white px-4 py-2 rounded">Simpan</button>
 
-      <h3 class="text-lg font-semibold mt-6 text-gray-800">Filter Rekap</h3>
-      <div class="flex flex-wrap gap-2 mb-4">
+      <h3 class="text-lg font-semibold mt-6">Filter Rekap</h3>
+      <div class="flex gap-2 mb-2">
         <input type="number" placeholder="Tahun" id="filterTahun" class="p-2 border rounded">
         <input type="month" id="filterBulan" class="p-2 border rounded">
-        <button onclick="filterData()" class="bg-blue-500 hover:bg-blue-700 text-white px-3 py-2 rounded">Terapkan Filter</button>
+        <button onclick="filterData()" class="bg-blue-600 text-white px-3 py-1 rounded">Terapkan Filter</button>
       </div>
 
-      <div class="overflow-x-auto bg-white rounded shadow">
-        <table class="min-w-full text-sm text-left border" id="tabelData">
-          <thead class="bg-blue-200">
+      <div class="overflow-x-auto">
+        <table class="min-w-full bg-white text-sm" id="tabelData">
+          <thead class="bg-gray-200 text-left">
             <tr>
-              <th class="px-2 py-2">Tanggal</th>
-              <th class="px-2 py-2">Nama</th>
-              <th class="px-2 py-2">Jenis</th>
-              <th class="px-2 py-2">Jumlah</th>
-              <th class="px-2 py-2">Harga Satuan</th>
-              <th class="px-2 py-2">Total</th>
-              <th class="px-2 py-2">Dana</th>
-              <th class="px-2 py-2">Tahun</th>
-              <th class="px-2 py-2">Penggunaan</th>
-              <th class="px-2 py-2">Foto</th>
+              <th class="px-2 py-1">No</th>
+              <th class="px-2 py-1">Tanggal</th>
+              <th class="px-2 py-1">Kode</th>
+              <th class="px-2 py-1">Nama</th>
+              <th class="px-2 py-1">Keterangan</th>
+              <th class="px-2 py-1">Jumlah</th>
+              <th class="px-2 py-1">Harga</th>
+              <th class="px-2 py-1">Total</th>
+              <th class="px-2 py-1">Dana</th>
+              <th class="px-2 py-1">Tahun</th>
+              <th class="px-2 py-1">Asal</th>
+              <th class="px-2 py-1">Dokumen</th>
+              <th class="px-2 py-1">Keadaan</th>
+              <th class="px-2 py-1">Pengguna</th>
+              <th class="px-2 py-1">Keterangan</th>
+              <th class="px-2 py-1">Foto</th>
             </tr>
           </thead>
           <tbody id="dataBody"></tbody>
         </table>
       </div>
 
-      <button onclick="downloadPDF()" class="mt-4 bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded">Unduh PDF</button>
+      <button onclick="downloadPDF()" class="mt-2 bg-red-500 text-white px-4 py-2 rounded">Unduh PDF</button>
     </div>
   </div>
 
-  <!-- Scripts -->
-  <script>
-    let dataInventaris = [];
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+<script>
+  let dataInventaris = [];
 
-    function login() {
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
-      if(username === 'admin' && password === 'admin123') {
-        document.getElementById('loginSection').style.display = 'none';
-        document.getElementById('mainSection').style.display = 'block';
-      } else {
-        alert('Username atau password salah!');
-      }
+  function login() {
+    const u = document.getElementById('username').value;
+    const p = document.getElementById('password').value;
+    if (u === 'admin' && p === 'admin123') {
+      document.getElementById('loginSection').style.display = 'none';
+      document.getElementById('mainSection').style.display = 'block';
+    } else {
+      alert('Username atau password salah!');
     }
+  }
 
-    function simpanData() {
-      const nama = document.getElementById('nama').value;
-      const jenis = document.getElementById('jenis').value;
-      const jumlah = parseInt(document.getElementById('jumlah').value);
-      const harga = parseInt(document.getElementById('harga').value);
-      const dana = document.getElementById('dana').value;
-      const tahun = document.getElementById('tahun').value;
-      const penggunaan = document.getElementById('penggunaan').value;
-      const tanggal = document.getElementById('tanggal').value;
-      const foto = document.getElementById('foto').files[0];
+  function simpanData() {
+    const get = id => document.getElementById(id).value;
+    const jumlah = parseInt(get('jumlah')) || 0;
+    const harga = parseInt(get('harga')) || 0;
+    const total = jumlah * harga;
+    const fotoFile = document.getElementById('foto').files[0];
 
-      if (!foto) return alert('Mohon unggah foto barang!');
+    if (!fotoFile) return alert('Unggah foto!');
 
-      const reader = new FileReader();
-      reader.onload = function(e) {
-        const imgSrc = e.target.result;
-        const total = jumlah * harga;
-
-        const item = { tanggal, nama, jenis, jumlah, harga, total, dana, tahun, penggunaan, foto: imgSrc };
-        dataInventaris.push(item);
-        renderTable(dataInventaris);
-        document.getElementById('assetForm').reset();
+    const reader = new FileReader();
+    reader.onload = function (e) {
+      const item = {
+        urut: get('urut'), tanggal: get('tanggal'), kode: get('kode'), nama: get('nama'),
+        keteranganBarang: get('keteranganBarang'), jumlah, harga, total,
+        dana: get('dana'), tahun: get('tahun'), asal: get('asal'),
+        dokumen: get('dokumen'), keadaan: get('keadaan'), pengguna: get('pengguna'),
+        keterangan: get('keterangan'), foto: e.target.result
       };
-      reader.readAsDataURL(foto);
-    }
+      dataInventaris.push(item);
+      renderTable(dataInventaris);
+      document.getElementById('assetForm').reset();
+      document.getElementById('total').value = '';
+    };
+    reader.readAsDataURL(fotoFile);
+  }
 
-    function renderTable(data) {
-      const tbody = document.getElementById('dataBody');
-      tbody.innerHTML = '';
-      data.forEach(item => {
-        const row = `<tr>
+  function renderTable(data) {
+    const tbody = document.getElementById('dataBody');
+    tbody.innerHTML = '';
+    data.forEach((item, i) => {
+      tbody.innerHTML += `
+        <tr>
+          <td class="border px-2 py-1">${item.urut}</td>
           <td class="border px-2 py-1">${item.tanggal}</td>
+          <td class="border px-2 py-1">${item.kode}</td>
           <td class="border px-2 py-1">${item.nama}</td>
-          <td class="border px-2 py-1">${item.jenis}</td>
+          <td class="border px-2 py-1">${item.keteranganBarang}</td>
           <td class="border px-2 py-1">${item.jumlah}</td>
           <td class="border px-2 py-1">Rp${item.harga.toLocaleString()}</td>
           <td class="border px-2 py-1">Rp${item.total.toLocaleString()}</td>
           <td class="border px-2 py-1">${item.dana}</td>
           <td class="border px-2 py-1">${item.tahun}</td>
-          <td class="border px-2 py-1">${item.penggunaan}</td>
-          <td class="border px-2 py-1"><img src="${item.foto}" class="w-16 h-16 object-cover" /></td>
+          <td class="border px-2 py-1">${item.asal}</td>
+          <td class="border px-2 py-1">${item.dokumen}</td>
+          <td class="border px-2 py-1">${item.keadaan}</td>
+          <td class="border px-2 py-1">${item.pengguna}</td>
+          <td class="border px-2 py-1">${item.keterangan}</td>
+          <td class="border px-2 py-1"><img src="${item.foto}" class="w-16 h-16 object-cover"/></td>
         </tr>`;
-        tbody.innerHTML += row;
-      });
-    }
+    });
+  }
 
-    function filterData() {
-      const tahun = document.getElementById('filterTahun').value;
-      const bulan = document.getElementById('filterBulan').value;
-      const hasil = dataInventaris.filter(item => {
-        const tanggal = new Date(item.tanggal);
-        const bulanMatch = bulan ? item.tanggal.startsWith(bulan) : true;
-        const tahunMatch = tahun ? tanggal.getFullYear().toString() === tahun : true;
-        return bulanMatch && tahunMatch;
-      });
-      renderTable(hasil);
-    }
-  </script>
+  function filterData() {
+    const tahun = document.getElementById('filterTahun').value;
+    const bulan = document.getElementById('filterBulan').value;
+    const hasil = dataInventaris.filter(item => {
+      const tanggal = new Date(item.tanggal);
+      const bulanMatch = bulan ? item.tanggal.startsWith(bulan) : true;
+      const tahunMatch = tahun ? tanggal.getFullYear().toString() === tahun : true;
+      return bulanMatch && tahunMatch;
+    });
+    renderTable(hasil);
+  }
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-  <script>
-    function downloadPDF() {
-      const table = document.getElementById('tabelData');
-      html2canvas(table).then(canvas => {
-        const imgData = canvas.toDataURL('image/png');
-        const pdf = new jspdf.jsPDF('l', 'mm', 'a4');
-        const imgProps = pdf.getImageProperties(imgData);
-        const pdfWidth = pdf.internal.pageSize.getWidth();
-        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
-        pdf.addImage(imgData, 'PNG', 10, 10, pdfWidth - 20, pdfHeight);
-        pdf.save("rekap_inventaris.pdf");
-      });
-    }
-  </script>
+  function downloadPDF() {
+    const table = document.getElementById('tabelData');
+    html2canvas(table).then(canvas => {
+      const imgData = canvas.toDataURL('image/png');
+      const pdf = new jspdf.jsPDF('l', 'mm', 'a4');
+      const pdfWidth = pdf.internal.pageSize.getWidth();
+      const pdfHeight = (canvas.height * pdfWidth) / canvas.width;
+      pdf.addImage(imgData, 'PNG', 10, 10, pdfWidth - 20, pdfHeight);
+      pdf.save("rekap_inventaris.pdf");
+    });
+  }
+
+  document.getElementById('jumlah').addEventListener('input', hitungTotal);
+  document.getElementById('harga').addEventListener('input', hitungTotal);
+
+  function hitungTotal() {
+    const jumlah = parseInt(document.getElementById('jumlah').value) || 0;
+    const harga = parseInt(document.getElementById('harga').value) || 0;
+    const total = jumlah * harga;
+    document.getElementById('total').value = total.toLocaleString();
+  }
+</script>
 </body>
 </html>
