--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
   </style>
 </head>
 <body class="min-h-screen flex items-center justify-center">
-  <div id="app" class="w-full max-w-5xl bg-white bg-opacity-90 p-6 rounded-lg shadow-lg">
-    <div class="flex justify-center mb-4">
-      <img src="logo-sekolah.png" alt="Logo Sekolah" class="h-20">
-    </div>
-    <div id="loginSection" class="mb-6">
-      <h1 class="text-2xl font-bold mb-4 text-center">Login Pengguna</h1>
-      <input type="text" id="username" placeholder="Username" class="w-full mb-2 p-2 border rounded" />
-      <input type="password" id="password" placeholder="Password" class="w-full mb-4 p-2 border rounded" />
-      <button onclick="login()" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded w-full">Login</button>
+  <div id="app" class="w-full max-w-5xl bg-white bg-opacity-90 p-6 rounded-xl shadow-2xl backdrop-blur-md">
+    <div class="text-center mb-6">
+      <img src="logo-sekolah.png" alt="Logo Sekolah" class="mx-auto w-24 h-24 mb-2">
+      <h1 class="text-3xl font-bold text-blue-700">Aplikasi Inventaris Aset SMA Negeri 20</h1>
+      <p class="text-gray-700">Versi Web - Mudah Digunakan & Informatif</p>
     </div>
 
+    <!-- Login Section -->
+    <div id="loginSection" class="mb-6">
+      <h2 class="text-2xl font-semibold mb-4 text-center text-gray-800">Login Pengguna</h2>
+      <input type="text" id="username" placeholder="Username" class="w-full mb-2 p-3 border rounded shadow-sm" />
+      <input type="password" id="password" placeholder="Password" class="w-full mb-4 p-3 border rounded shadow-sm" />
+      <button onclick="login()" class="bg-blue-600 hover:bg-blue-800 text-white py-2 px-4 rounded w-full">Login</button>
+    </div>
+
+     <!-- Main Section -->
     <div id="mainSection" style="display:none">
       <h2 class="text-xl font-bold mb-4">Form Input Aset Sekolah</h2>
       <form id="assetForm" class="grid grid-cols-1 gap-4 md:grid-cols-2">
